# personal-server

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  CLEANUP.md  README.md  anti-slop.md  biome.json  docker-compose.qdrant.yaml  ingest.ipynb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  query.ipynb  test.py  todo.md  tsconfig.base.json  turbo.json
ai-apps/investment/: problem-statement.md  rag-restructure.md  responsibilities.md  sources.md
apps/ai-backend/: .env.example  README.md  docker-compose.prod.yaml  ecosystem.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/ai-client-connector/: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/ai-frontend/: .cta.json  .env.example  AGENTS.md  README.md  components.json  ecosystem.config.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/blog/: .gitignore  AGENTS.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
apps/embedding-service/: Dockerfile  docker-compose.yaml  embedding.py  requirements.txt
apps/filen/: .env.example  AGENTS.md  README.md  ecosystem.config.cjs  ecosystem.config.js  package.json  pnpm-lock.yaml
apps/fitness-tracker/: .gitignore  (+5 more)
deployments/fs-mcp/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  server.py
docs/: 1-setup.md  2-architecture.md  3-ai-tools.md  3-coding-tools.md  4-newsletter-ingestion.md
scripts/: cleanup.sh  fix-mtu.sh  mbox2html.py  restart-nginx.sh  sync-notes.sh
(+2192 files in other folders)
